# green_sys

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/logger/: logger_singletone.h
include/parser_factory/: parser.h
src/: main.cpp  ncurses_display.cpp
src/logger/: logger_singletone.cpp
src/parser_factory/: parser.cpp
test/: parser_test.cpp
